--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "31dae778",
+   "id": "8494d837",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "bf7d4ffb",
+   "id": "badff203",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "bb411d74",
+   "id": "a19d6c24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9d3f5b97",
+   "id": "902ca679",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "73232878",
+   "id": "5f229451",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7d8b3c28",
+   "id": "c726bffa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "97769397",
+   "id": "41b6734f",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c8070df2",
+   "id": "9525c27f",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b5cfa51d",
+   "id": "ed528ebe",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "34878edb",
+   "id": "284c4cf1",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "43a55634",
+   "id": "5c34cf59",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "3a5424b0",
+   "id": "51fe0c59",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "42d2f2b8",
+   "id": "b5b4669d",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "7257a2d6",
+   "id": "c91a86b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "9756f460",
+   "id": "ebecf45f",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "665aac48",
+   "id": "68e8a1c0",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1861bf2d",
+   "id": "384966e7",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "4faa591c",
+   "id": "34650e79",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "613c56b8",
+   "id": "68dee930",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da9e1b49",
+   "id": "a9f32e25",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "46ecdbee",
+   "id": "96e92deb",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "f2a28dc2",
+   "id": "52c397fb",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "a50cada0",
+   "id": "08981e5e",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5e6b0e3",
+   "id": "5c6a579c",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "b64f9ebf",
+   "id": "fb386b8e",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "0a79ae74",
+   "id": "bea7c712",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "1c56d448",
+   "id": "35d1c489",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "99cb0c03",
+   "id": "9941b024",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "9cdaf53b",
+   "id": "8d1600e3",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "84f69e7a",
+   "id": "1e56919d",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "10d2df8b",
+   "id": "214e2220",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "f136118b",
+   "id": "0924bc1a",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "07ada9c1",
+   "id": "3fac4df2",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "7f4f11f5",
+   "id": "9d8373d7",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "989be7bc",
+   "id": "e43e4d16",
    "metadata": {},
    "outputs": [
     {
@@ -762,10 +762,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d48e717f",
+   "execution_count": 104,
+   "id": "1bfbd961",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "someone5678 sur le dépot someone5678/device_xiaomi_sweet\n",
+      "joshghent sur le dépot joshghent/blog\n",
+      "OleksandrBlack sur le dépot OleksandrBlack/ukita_installer\n",
+      "infinite-persistence sur le dépot OdyseeTeam/odysee-frontend\n",
+      "MarvinHatesOceans sur le dépot auto-maintainers/desktop\n",
+      "dependabot sur le dépot wilfriedago/discord-vscode\n",
+      "pelikhan sur le dépot microsoft/microcode\n",
+      "sspalding sur le dépot sspalding/Dementia-Prediction\n",
+      "Mustafa-Azad025 sur le dépot freeCodeCamp/Developer_Quiz_Site\n",
+      "Filmy4waphindi sur le dépot Filmy4waphindi/6aug\n",
+      "sponglord sur le dépot Adyen/adyen-web\n",
+      "JPhilipp sur le dépot atteneder/glTFast\n",
+      "barttec sur le dépot barttec/bart.tecc\n",
+      "oliviaqm sur le dépot oliviaqm/loan-eligibility-classification-ml-ops\n",
+      "emanuele-mincato sur le dépot emanuele-mincato/SQL_exercises\n",
+      "roboadhoc sur le dépot axadoo/mercadopago\n",
+      "ariyan103 sur le dépot ariyan103/EsportServer\n",
+      "tizenmile sur le dépot dmytrik/filmoteka-js\n",
+      "elieguitton sur le dépot elieguitton/named-entity-recognition\n",
+      "Lcastro98 sur le dépot Lcastro98/rick-and-morty\n",
+      "Izabela88 sur le dépot Izabela88/recipe-app-api\n",
+      "renovate sur le dépot taskforcesh/bullmq\n",
+      "surovjeniya sur le dépot surovjeniya/frontend\n",
+      "rgmiller sur le dépot LLNL/UnifyFS\n",
+      "github-actions sur le dépot microsoftgraph/microsoft-graph-docs\n",
+      "dependabot sur le dépot mrjonstrong/hbfl\n",
+      "Rello sur le dépot Rello/audioplayer\n",
+      "Kuttecraft sur le dépot Kuttecraft/Marlin_Kuttercraft_Fimware_32Bits\n",
+      "quangdb-indigames sur le dépot indigames/LiveBreeder\n",
+      "krest32 sur le dépot krest32/Java-Doc-Web\n"
+     ]
+    }
+   ],
    "source": [
     "r = requests.get('https://api.github.com/events')\n",
     "for event in r.json():\n",
@@ -775,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09f7aad8",
+   "id": "a55c0b97",
    "metadata": {},
    "outputs": [],
    "source": []
