--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "257fa985",
+   "id": "e108076f",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "8f095c60",
+   "id": "8a2711ef",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c9ee87a0",
+   "id": "cf1d4813",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "59ee9557",
+   "id": "d8cf0258",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "e20340b5",
+   "id": "98534e20",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "83df800c",
+   "id": "a24febe2",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "11aed01b",
+   "id": "9d50818c",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "ceaf0dce",
+   "id": "3db1b03d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19fa4ba7",
+   "id": "a574de14",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -215,12 +215,16 @@
     "    \n",
     "* listes en compréhension (comprehension list) : `[x ** 2 for x in range(10)]`\n",
     "\n",
-    "## Après-midi"
+    "## Après-midi\n",
+    "\n",
+    "* manipulations d'itérables \n",
+    "* création de générateurs \n",
+    "    * les générateurs sont des fonctions où l'on utilise le mot clé `yi"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "49bfaabb",
+   "id": "a43de2a1",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -250,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d72ff4aa",
+   "id": "d82f90f2",
    "metadata": {},
    "outputs": [],
    "source": []
