--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e108076f",
+   "id": "2f5bda73",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "8a2711ef",
+   "id": "6bd7df7a",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "cf1d4813",
+   "id": "2eae9a02",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "d8cf0258",
+   "id": "ff512949",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "98534e20",
+   "id": "5963ee6b",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "a24febe2",
+   "id": "6273afef",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "9d50818c",
+   "id": "b8247080",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "3db1b03d",
+   "id": "b8fa61c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a574de14",
+   "id": "43c87fd6",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -219,12 +219,13 @@
     "\n",
     "* manipulations d'itérables \n",
     "* création de générateurs \n",
-    "    * les générateurs sont des fonctions où l'on utilise le mot clé `yi"
+    "    * les générateurs sont des fonctions où l'on utilise le mot clé `yield`\n",
+    "    * les yields sont des \"returns intermédiaires\", ils vont mettre la fonction en pause, retourner un résultat, puis la fonction pourra reprendre de là où elle s'est arrêtée"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a43de2a1",
+   "id": "6397b89f",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -254,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d82f90f2",
+   "id": "6b215f13",
    "metadata": {},
    "outputs": [],
    "source": []
